# beaver-moon-images-converter

./: .dockerignore  .gitignore  Dockerfile  README.md  convert_images.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_convert_images.py
